--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script
         id="sap-ui-bootstrap"
         src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
-        data-sap-ui-theme="sap_belize"
+        data-sap-ui-theme="sap_fiori_3_dark"
         data-sap-ui-resourceroots='{
             "portfolio": "./"
         }'
